# sandsmark-integration

./: CMakeLists.txt  README.md
autotests/: CMakeLists.txt  kdeplatformtheme_unittest.cpp  kfiledialog_unittest.cpp  kfiledialogqml_unittest.cpp  khintssettings_unittest.cpp
src/: CMakeLists.txt  Messages.sh
src/platformtheme/: CMakeLists.txt  kdeplatformfiledialogbase.cpp  kdeplatformfiledialogbase_p.h  kdeplatformfiledialoghelper.cpp  kdeplatformfiledialoghelper.h  kdeplatformsystemtrayicon.cpp  kdeplatformsystemtrayicon.h  kdeplatformtheme.cpp  kdeplatformtheme.h  kdeplatformtheme.json  kdirselectdialog.cpp  kdirselectdialog_p.h  kfiletreeview_p.h  kfontsettingsdata.cpp  kfontsettingsdata.h  khintssettings.cpp  khintssettings.h  kwaylandintegration.cpp  kwaylandintegration.h  main.cpp  previewprovider.h  sfilemetapreview.cpp  sfilemetapreview.h  sfileplacesitem.cpp  sfileplacesitem_p.h  sfileplacesmodel.cpp  sfileplacesmodel.h  sfileplacesview.cpp  sfileplacesview.h  sfileplacesview_p.h  x11integration.h
src/widgetstyle/: CMakeLists.txt  sandsmarkstyle.cpp  sandsmarkstyle.h  sandsmarkstyle.json  sandsmarkstyleplugin.cpp  sandsmarkstyleplugin.h
tests/: qfiledialogtest.cpp
